# memo-app

./: .dockerignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml  docker-entrypoint.sh
.github/workflows/: ci.yaml
client/memoctl/: Cargo.toml
client/memoctl/src/: main.rs
db/migrations/: 20250809051924_create_tables.sql
docs/: authorized_user.md  migrations.md
src/: lib.rs  main.rs
src/app/: auth.rs  mod.rs  model.rs  notes.rs
src/auth/: model.rs
src/client/: mod.rs
src/domain/: model.rs  note.rs
src/middleware/auth/: extractor.rs  mod.rs  model.rs  token.rs
src/repository/: note.rs  user.rs
src/service/: auth.rs
tests/: auth_service.rs  auth_signup.rs  jwt_token.rs  notes.rs
