[package]
name = "memo-app"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.11.0"
argon2 = "0.5.3"
password-hash = { version = "0.5.0", features = ["rand_core"] }
serde = { version = "1.0.219", features = ["derive"] }
sqlx = { version = "0.8.6", features = ["postgres", "sqlite", "runtime-tokio-native-tls", "macros"] }
tokio = { version = "1", features = ["full"] }
rand_core = { version = "0.6", features = ["getrandom"] }
thiserror = "1.0"
async-trait = "0.1"
serde_json = "1.0"
jsonwebtoken = "9"

[features]
# PostgreSQL サポートを有効化（`--features postgres`）
postgres = ["sqlx/postgres"]
